--- a/index.html.html
+++ b/index.html.html
@@ -179,11 +179,12 @@
         <h2>Curated Collection</h2>
         <div class="grid">
             <div class="product-card">
-                <img src="https://via.placeholder.com/300x300?text=Minimal+Blazer" alt="Minimal Blazer">
-                <h3>Minimal Blazer</h3>
-                <p>Elegant unisex blazer in soft wool, perfect for layering with warmth and seduction.</p>
-                <a href="https://www.amazon.com/dp/B08N5WRWNW" target="_blank" class="amazon-button">View on Amazon</a>
+                <img src="https://m.media-amazon.com/images/I/61mFhuYe7AL._AC_SY741_.jpg" alt="Minimal Blazer">
+                <h3>Wide Leg Pants Lounge Set</h3>
+                <p>ANRABESS Women 2 Piece Outfits 2025 Fall Fashion</p>
+                <a href="https://amzn.to/3O0X5sq" target="_blank" class="amazon-button">View on Amazon</a>
             </div>
+            
             <div class="product-card">
                 <img src="https://via.placeholder.com/300x300?text=Silk+Scarf" alt="Silk Scarf">
                 <h3>Silk Scarf</h3>
@@ -238,4 +239,5 @@
         });
     </script>
 </body>
+
 </html>
