--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ function renderProducts(list) {
             <p>${p.description}</p>
             <div class="price">$${p.price}</div>
             <a href="${p.link}" target="_blank" class="amazon-button">View on Amazon</a>
-            <button class="share-button" data-link="${siteLink}">🔗 Share</button>
+           <button class="share-button" data-link="${siteLink}">Share</button>
         `;
         grid.appendChild(card);
     });
@@ -698,3 +698,4 @@ overlay.addEventListener("click", () => {
     </script>
 </body>
 </html>
+
