Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -601,7 +601,98 @@ First, the user has provided a partial code snippet, and I need to complete it. 
     "occasion": "casual / beach",
     "price": 4.99,
     "gender": "women"
+},
+            {
+  "id": 16,
+  "title": "Men's Polycotton Textured Half Sleeve Shirt",
+  "description": "GRECIILOOKS Men's Polycotton Shirt — A stylish regular-fit textured half-sleeve shirt made from durable polycotton fabric. Comfortable enough for daily wear and polished enough for office, parties, meetings, and casual outings.",
+  "image": "https://m.media-amazon.com/images/I/81Z60TWdX4L._SY879_.jpg",
+  "link": "https://amzn.to/3LWu9kV",
+  "category": "clothing",
+  "subCategory": "shirt",
+  "tags": [
+    "men shirt",
+    "half sleeve",
+    "textured",
+    "polycotton",
+    "casual wear",
+    "office wear"
+  ],
+  "season": "all season",
+  "material": "polycotton",
+  "occasion": "casual / office / party",
+  "price": 4.99,
+  "gender": "men"
+},
+            {
+  "id": 17,
+  "title": "Men and Boys Super Oversized Embroidered Cotton T-Shirt",
+  "description": "Potter: The Silent Vow off-white super oversized T-shirt featuring subtle embroidery. Made from soft cotton, designed for casual streetwear comfort with a relaxed, modern fit.",
+  "image": "https://m.media-amazon.com/images/I/61SZDllAZjL._SY879_.jpg",
+  "link": "https://amzn.to/4kaOOhH",
+  "category": "clothing",
+  "subCategory": "t-shirt",
+  "tags": [
+    "oversized t-shirt",
+    "streetwear",
+    "embroidered",
+    "round neck",
+    "short sleeves",
+    "cotton"
+  ],
+  "season": "all season",
+  "material": "cotton",
+  "occasion": "casual / streetwear",
+  "price": 13.99,
+  "gender": "men"
+},
+            {
+  "id": 18,
+  "title": "Men and Boys Oversized Cotton Linen Bomber Jacket",
+  "description": "The Souled Store Dune lightweight bomber jacket made from a breathable cotton-linen blend. Features a solid design with full sleeves, band neck, and oversized fit, ideal for casual summer streetwear.",
+  "image": "https://m.media-amazon.com/images/I/51LUZGjutyL._SY879_.jpg",
+  "link": "https://amzn.to/4bwkQTg",
+  "category": "clothing",
+  "subCategory": "jacket",
+  "tags": [
+    "bomber jacket",
+    "cotton linen",
+    "oversized fit",
+    "streetwear",
+    "lightweight",
+    "summer wear"
+  ],
+  "season": "summer",
+  "material": "cotton linen",
+  "occasion": "casual / streetwear",
+  "price": 23.99,
+  "gender": "men"
+},
+            {
+  "id": 19,
+  "title": "Men's Stand-Up Collar Zip-Up Sweatshirt",
+  "description": "PROSHARX old money aesthetic zip-up sweatshirt featuring a stand-up collar. Designed for premium comfort with a timeless, minimal look suitable for casual and smart streetwear styling.",
+  "image": "https://m.media-amazon.com/images/I/71PX49awLjL._SX679_.jpg",
+  "link": "https://amzn.to/3M8LSpb",
+  "category": "clothing",
+  "subCategory": "sweatshirt",
+  "tags": [
+    "zip up sweatshirt",
+    "stand up collar",
+    "old money style",
+    "minimal aesthetic",
+    "casual wear"
+  ],
+  "season": "all season",
+  "material": "cotton blend",
+  "occasion": "casual / streetwear",
+  "price": 19.99,
+  "gender": "men"
 }
+
+
+
+
     
 
 
@@ -759,6 +850,7 @@ overlay.addEventListener("click", () => {
     </script>
 </body>
 </html>
+
 
 
 
