--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
     </style>
 </head>
 <body>
-    <nav>
+        <nav>
         <div class="logo">NOIRÉ</div>
-        <div id="auth-links"></div>  <!-- Dynamic auth links added by auth.js -->
+        <div id="auth-links"></div>
     </nav>
     
     <section class="hero">
@@ -626,3 +626,4 @@
     </script>
 </body>
 </html>
+
