--- a/wearloop.html
+++ b/wearloop.html
@@ -36,6 +36,12 @@
             box-sizing: border-box;
         }
 
+        #auth-links {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
         nav .logo {
             font-family: 'Playfair Display', serif;
             font-size: 1.5rem;
@@ -239,11 +245,33 @@
         </div>
     </div>
 
-    <script>
-        // Start Auth
-        auth.init();
-    </script>
     <script src="js/wearloop.js"></script>
+    <script>
+        async function startWearLoop() {
+            console.log('[WearLoop Page] Initializing...');
+            try {
+                await Promise.race([
+                    auth.init(),
+                    new Promise(resolve => setTimeout(resolve, 2000))
+                ]);
+            } catch (err) {
+                console.error('[WearLoop] Auth init error:', err);
+            }
+
+            // 2. Initialize WearLoop Feed
+            if (typeof wearloop !== 'undefined') {
+                await wearloop.init();
+            } else {
+                console.error('[WearLoop] wearloop.js not loaded!');
+            }
+        }
+
+        if (document.readyState === 'loading') {
+            document.addEventListener('DOMContentLoaded', startWearLoop);
+        } else {
+            startWearLoop();
+        }
+    </script>
 </body>
 
 </html>
