--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
     <!-- SPA Views & Router -->
     <script src="js/home.js"></script>
+    <script src="js/sets.js"></script>
     <script src="js/view_cart.js"></script>
+    <script src="js/view_sets.js"></script>
     <script src="js/view_wearloop.js"></script>
     <script src="js/view_profile.js"></script>
     <script src="js/router.js"></script>
